[gd_scene load_steps=2 format=3 uid="uid://cbrenhxc18fvf"]

[ext_resource type="Script" path="res://scripts/StartManager.gd" id="1_vbmi0"]

[node name="Manager" type="Node"]
script = ExtResource("1_vbmi0")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.372549)

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -175.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="TitleLabel" type="Label" parent="Control/VBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_stretch_ratio = 6.5
theme_override_font_sizes/font_size = 56
text = "Bien hecho. Alcanzaste la meta en"
horizontal_alignment = 1

[node name="TimeLabel" type="Label" parent="Control/VBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_stretch_ratio = 6.5
theme_override_font_sizes/font_size = 66
text = "1 segundos"
horizontal_alignment = 1

[node name="HBoxContainer5" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ButtonJugar" type="Button" parent="Control/VBoxContainer/HBoxContainer5"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme_override_font_sizes/font_size = 56
text = "Jugar de nuevo"

[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer5/ButtonJugar" to="." method="_on_ButtonJugar_pressed"]
